--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -3,11 +3,11 @@ on: [push]
 jobs:
   run:
     runs-on: [ubuntu-latest]
-    container: docker://dvcorg/cml-py3:latest
     steps:
       - uses: actions/checkout@v2
+      - uses: iterative/cml-action@v1
+        with: 
+          version: latest
       - name: cml_run
-        env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           conda env create -f environment.yml
